--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0; /* Remove padding */
-    overflow: hidden; /* Prevent scrollbars if needed */
+    overflow: auto; /* Prevent scrollbars if needed */
     height: 100vh; /* Ensure body takes full viewport height */
     width: 100vw; /* Ensure body takes full viewport width */
 }
